# session-type-state-spaces-form-lattices

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md
benchmarks/: README.md  protocols.json
lean/: README.md  lakefile.lean
lean/Reticulate/: ReticulateTheorem.lean  UniqueExtrema.lean
lean/Reticulate/Graph/: DirectedGraph.lean  Reachability.lean  SCC.lean
lean/Reticulate/Lemmas/: BottomAbsorption.lean  BranchLemma.lean  EndLemma.lean  ParallelLemma.lean  RecursionLemma.lean  SequencingLemma.lean
lean/Reticulate/Spec/Core/: FreeVars.lean  Reachability.lean  SessionType.lean  Termination.lean  WellFormed.lean
lean/Reticulate/Spec/StateSpace/: StateSpace.lean  StateSpaceEdges.lean  StateSpaceLattice.lean
lean/Reticulate/Spec/StateSpace/StateSpaceLattice/: BranchSelect.lean  ParAndBundles.lean  Universal.lean
tool/: README.md  pyproject.toml
tool/man/: reticulate.1
tool/reticulatep/: __init__.py  cli.py  grammar.yaml  lattice.py  parser.py  product.py  resolve.py  statespace.py  termination.py  visualize.py
tool/tests/: test_grammar_conformance.py
